--- a/hihoCoder/hihoCoder.vcxproj.filters
+++ b/hihoCoder/hihoCoder.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="week93(1).cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="week94%281%29%28unsolved%29.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
